feat: main api and repository refactor
